--- a/twilight-hammer/src/App.css
+++ b/twilight-hammer/src/App.css
@@ -15,6 +15,12 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.logo.edge:hover {
+  filter: drop-shadow(0 0 2em #0f6cbdaa);
+}
+.logo.cpp:hover {
+  filter: drop-shadow(0 0 2em #0c427Eaa);
+}
 
 @keyframes logo-spin {
   from {
